--- a/css/main.css
+++ b/css/main.css
@@ -48,3 +48,8 @@ body {
 .management:hover {
     color: #063761;
 }
+
+.update-user-inf-wrapper {
+    text-align: center;
+    margin-top: 20px;
+}
