--- a/css/forms/form-small.css
+++ b/css/forms/form-small.css
@@ -8,4 +8,8 @@
         grid-template-columns: 1fr;
         width: 80%;
     }
+
+    .accounts-update-styles {
+        grid-template-columns: 1fr;
+    }
 }
