--- a/css/main.css
+++ b/css/main.css
@@ -53,3 +53,7 @@ body {
     text-align: center;
     margin-top: 20px;
 }
+
+/* classification view styiling given by instructor */
+
+/* For vehicle display in classification view */
