--- a/css/vehicle-details/details.css
+++ b/css/vehicle-details/details.css
@@ -10,3 +10,66 @@
 .thumbnails img {
     width: 200px;
 }
+
+.inv-details img {
+    width: 500px;
+}
+
+/* Styles for the review form */
+
+.form-wrapper {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.form-wrapper input {
+    width: 85px;
+    margin: 0 auto;
+    margin-top : 10px;
+    margin-bottom : 10px;
+}
+
+.form {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+}
+
+.form input {
+    width: 50px;
+}
+.form textarea {
+    width: 80%;
+    height: 100px;
+}
+
+.notice {
+    text-align: center;
+}
+
+/*Styles for the existing reviews*/
+.reviews {
+    text-align: center;
+}
+.review-item li {
+    list-style: none;
+    margin-top: 10px;
+}
+
+.post-date {
+    font-size: 0.8rem;
+    color: rgb(98, 95, 95);
+    margin-bottom: 15px;
+    text-align: end;
+    margin-right: 10px;
+}
+
+.review-wrapper {
+    display: flex;
+    width: 80%;
+    border: 1px solid #4c96d7;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
